--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 
     -->
     <h1>Hellow World We Are Software Developer!</h1>
+    <main id="main">
+  <h1 id="title">Richmond and Eze</h1>
+  <p>The man who saved the world</p>
+  <figure id="img-div">
+    <img id="image"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1czbpQUnw6S-xdFetuWQJu2SVcK2tK07QFA&usqp=CAU"
+      alt="The Man who saved the World" />
+    <figcaption id="img-caption">
+      Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+      on how to increase wheat yields - part of his life-long war on hunger.
+    </figcaption>
+  </figure>
+</main>
     <script src="js/index.js"></script>
   </body>
 </html>
