--- a/index.html
+++ b/index.html
@@ -23,18 +23,36 @@
     -->
     <h1>Hellow World We Are Software Developer!</h1>
     <main id="main">
-  <h1 id="title">Richmond and Eze</h1>
-  <p>The man who saved the world</p>
-  <figure id="img-div">
-    <img id="image"
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1czbpQUnw6S-xdFetuWQJu2SVcK2tK07QFA&usqp=CAU"
-      alt="The Man who saved the World" />
-    <figcaption id="img-caption">
-      Dr. Norman Borlaug, third from the left, trains biologists in Mexico
-      on how to increase wheat yields - part of his life-long war on hunger.
-    </figcaption>
-  </figure>
-</main>
+      <h1 id="title">Richmond and Eze</h1>
+      <p>The man who saved the world</p>
+      <figure id="img-div">
+        <img
+          id="image"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1czbpQUnw6S-xdFetuWQJu2SVcK2tK07QFA&usqp=CAU"
+          alt="The Man who saved the World"
+        />
+        <figcaption id="img-caption">
+          Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+          on how to increase wheat yields - part of his life-long war on hunger.
+        </figcaption>
+      </figure>
+      <section id="tribute-info">
+        <h3>Here's a time line of Dr. Borlaug's life:</h3>
+        <ul>
+          <li>1914-born in Cresco</li>
+          <li>
+            1933-Leaves his family's farm to attend the University of Minnesota,
+            thanks to a Depression era program known as the "National Youth
+            Administration"
+          </li>
+          <li>
+            !935-Has to stop school and save up more money. works in the
+            civillian conservation corps, helping starving Americans. "Isaw how
+            food changed them", he said. "Allof this left scars on me".
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="js/index.js"></script>
   </body>
 </html>
