--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     - The freeCodeCamp Team
 
     -->
-    <h1>Hellow World We Are Software Developer!</h1>
+    <!-- <h1>Hellow World We Are Software Developer!</h1> -->
     <main id="main">
       <h1 id="title">Richmond and Eze</h1>
       <p>The man who saved the world</p>
@@ -46,7 +46,7 @@
             Administration"
           </li>
           <li>
-            !935-Has to stop school and save up more money. works in the
+            1935-Has to stop school and save up more money. works in the
             civillian conservation corps, helping starving Americans. "Isaw how
             food changed them", he said. "Allof this left scars on me".
           </li>
